# Document_scanner_cpp

./: CMakeLists.txt  README.md
src/: main.cpp
src/helpers/: documentHandler.cpp  documentHandler.h
